<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <LinearLayout
                android:id="@+id/backlogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/imageButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="backClicked"
                    android:text="Back" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Cook"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8">

                    <LinearLayout

                        android:id="@+id/orderslayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/column1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="vertical"
                            tools:background="@android:color/holo_green_light">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Table 1" />

                            <TextView
                                android:id="@+id/description_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/holo_green_light"
                                android:backgroundTint="@android:color/holo_green_light"
                                android:fontFamily="casual"
                                android:maxLines="5"
                                android:onClick="markOrderDialogue"
                                android:padding="2dp"
                                android:text="Table 1&#10;\u0009Souvlaki xoirino -krampi x1&#10;\u0009Mprizola me patates x2&#10;\u0009Souvlaki kotopoullo x2&#10;\u0009Salata xwriatiki x1&#10;\u0009Merida makaronia tou fpournou x1&#10;\u0009Coca cola 375ml x3"
                                android:textAppearance="@style/TextAppearance.AppCompat"
                                android:textSize="15sp"
                                tools:background="@android:color/holo_green_light" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/column2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/description_text9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/holo_green_light"
                                android:backgroundTint="@android:color/holo_green_light"
                                android:fontFamily="casual"
                                android:maxLines="5"
                                android:onClick="markOrderDialogue"
                                android:padding="2dp"
                                android:text="Table 1&#10;\u0009Souvlaki xoirino -krampi x1&#10;\u0009Mprizola me patates x2&#10;\u0009Souvlaki kotopoullo x2&#10;\u0009Salata xwriatiki x1&#10;\u0009Merida makaronia tou fpournou x1&#10;\u0009Coca cola 375ml x3"
                                android:textAppearance="@style/TextAppearance.AppCompat"
                                android:textSize="15sp"
                                tools:background="@android:color/holo_green_light" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/column3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/description_text12"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/holo_green_light"
                                android:backgroundTint="@android:color/holo_green_light"
                                android:fontFamily="casual"
                                android:maxLines="5"
                                android:onClick="markOrderDialogue"
                                android:padding="2dp"
                                android:text="Table 1&#10;\u0009Souvlaki xoirino -krampi x1&#10;\u0009Mprizola me patates x2&#10;\u0009Souvlaki kotopoullo x2&#10;\u0009Salata xwriatiki x1&#10;\u0009Merida makaronia tou fpournou x1&#10;\u0009Coca cola 375ml x3"
                                android:textAppearance="@style/TextAppearance.AppCompat"
                                android:textSize="15sp"
                                tools:background="@android:color/holo_green_light" />




                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>